[Fix] home overflow-y scroll

--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -8,6 +8,11 @@
     color: #222;
     font-size: 25px;
   }
+  div {
+    height: 80%;
+    // overflow-x: hidden;
+    overflow-y: auto;
+  }
   height: 48%;
 }
 
@@ -155,6 +160,9 @@
   .shopping-box, .alert-box {
     .maker {
     font-size: 19px;
+    }
+    div {
+      height: 100%;
     }
     height: 100%;
   }
